--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -53,6 +53,7 @@
         app:layout_constraintTop_toBottomOf="@+id/firstNameTextInputLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Email" />
@@ -87,6 +88,7 @@
         app:layout_constraintTop_toBottomOf="@+id/numberTextInputLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:hint="Password" />
