--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -20,9 +20,10 @@
         app:layout_constraintVertical_chainStyle="packed">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/firstNameEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="First Name" />
+            android:hint="@string/first_name" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -36,9 +37,10 @@
         app:layout_constraintStart_toEndOf="@+id/firstNameTextInputLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/lastNameEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Last Name" />
+            android:hint="@string/last_name" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -56,13 +58,13 @@
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Email" />
+            android:hint="@string/email" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:id="@+id/numberTextInputLayout"
         android:layout_width="match_parent"
-        android:layout_height="59dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         app:layout_constraintBottom_toTopOf="@+id/passwordTextInputLayout"
@@ -71,9 +73,10 @@
         app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/numberEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Mobile Number" />
+            android:hint="@string/mobile_number" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
@@ -91,7 +94,7 @@
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Password" />
+            android:hint="@string/password" />
     </android.support.design.widget.TextInputLayout>
 
     <Button
@@ -101,7 +104,7 @@
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Register"
+        android:text="@string/register"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
