--- a/app/src/main/res/layout/activity_create_group_ride.xml
+++ b/app/src/main/res/layout/activity_create_group_ride.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/title"
+                android:id="@+id/title_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toBottomOf="@id/title_input_layout">
 
             <android.support.design.widget.TextInputEditText
-                android:id="@+id/description"
+                android:id="@+id/description_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
