create group rides list fragment

--- a/app/src/main/res/layout/fragment_group_rides.xml
+++ b/app/src/main/res/layout/fragment_group_rides.xml
@@ -1,13 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.diploma.volodymyr.bicyclecity.ui.fragment.GroupRidesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/group_rides_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        tools:listitem="@layout/recycler_group_rides_item" />
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
