--- a/app/src/main/res/layout/fragment_group_rides.xml
+++ b/app/src/main/res/layout/fragment_group_rides.xml
@@ -4,10 +4,16 @@
     android:layout_height="match_parent"
     tools:context="com.diploma.volodymyr.bicyclecity.ui.fragment.GroupRidesFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/group_rides_recycler"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem="@layout/recycler_group_rides_item" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/group_rides_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/recycler_group_rides_item" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </android.support.constraint.ConstraintLayout>
