--- a/app/src/main/res/layout/fragment_group_rides.xml
+++ b/app/src/main/res/layout/fragment_group_rides.xml
@@ -12,6 +12,9 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/group_rides_recycler"
             android:layout_width="match_parent"
+            android:paddingTop="8dp"
+            android:clipToPadding="false"
+            android:paddingBottom="8dp"
             android:layout_height="match_parent"
             tools:listitem="@layout/recycler_group_rides_item" />
     </android.support.v4.widget.SwipeRefreshLayout>
