--- a/app/src/main/res/layout/activity_create_group_ride.xml
+++ b/app/src/main/res/layout/activity_create_group_ride.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
     android:fillViewport="true"
     tools:context="com.diploma.volodymyr.bicyclecity.ui.activity.groupride.CreateGroupRideActivity"
     tools:ignore="ContentDescription">
@@ -48,99 +49,94 @@
         </android.support.design.widget.TextInputLayout>
 
         <TextView
-            android:id="@+id/date_time"
+            android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
-            android:hint="@string/tap_to_pick_date_and_time"
-            android:textSize="20sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/choose_your_average_speed_usually"
+            android:textColor="@color/colorAccent"
+            app:layout_constraintStart_toStartOf="@id/description_input_layout"
             app:layout_constraintTop_toBottomOf="@id/description_input_layout" />
 
-        <ImageView
-            android:id="@+id/point1"
-            android:layout_width="wrap_content"
+        <Spinner
+            android:id="@+id/avg_speed_spinner"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_start_point"
-            app:layout_constraintBottom_toBottomOf="@+id/choose_start_layout"
-            app:layout_constraintEnd_toStartOf="@id/choose_start_layout"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/choose_start_layout" />
+            app:layout_constraintTop_toBottomOf="@id/textView" />
 
-        <View
-            android:layout_width="2dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="1dp"
-            android:layout_marginTop="1dp"
-            android:background="@color/place_autocomplete_prediction_primary_text"
-            app:layout_constraintBottom_toTopOf="@id/point2"
-            app:layout_constraintEnd_toEndOf="@id/point1"
-            app:layout_constraintStart_toStartOf="@id/point1"
-            app:layout_constraintTop_toBottomOf="@id/point1" />
-
-        <ImageView
-            android:id="@+id/point2"
+        <TextView
+            android:id="@+id/date_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:src="@drawable/ic_finish_point"
-            app:layout_constraintBottom_toBottomOf="@id/choose_finish_layout"
-            app:layout_constraintEnd_toEndOf="@+id/point1"
-            app:layout_constraintStart_toStartOf="@+id/point1"
-            app:layout_constraintTop_toTopOf="@id/choose_finish_layout" />
+            android:layout_marginEnd="12dp"
+            android:layout_marginTop="12dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toStartOf="@+id/time_text"
+            app:layout_constraintHorizontal_bias="0.45"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/avg_speed_spinner"
+            tools:text="20 April, 2018" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/choose_start_layout"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/time_text"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="16dp"
             android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"
-            android:hint="@string/tap_to_pick_start_point"
+            android:layout_marginTop="12dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/point1"
-            app:layout_constraintTop_toBottomOf="@id/date_time">
+            app:layout_constraintStart_toEndOf="@+id/date_text"
+            app:layout_constraintTop_toBottomOf="@id/avg_speed_spinner"
+            tools:text="15:00" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/choose_start"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:inputType="none" />
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/choose_finish_layout"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="12dp"
-            android:hint="@string/tap_to_pick_finish_point"
+            android:text="@string/tap_to_pick_date_or_time"
+            android:textColor="@color/colorAccent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/point2"
-            app:layout_constraintTop_toBottomOf="@id/choose_start_layout">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/date_text" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/choose_finish"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:focusable="false"
-                android:inputType="none" />
-        </android.support.design.widget.TextInputLayout>
+        <DatePicker
+            android:id="@+id/date_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:calendarViewShown="false"
+            android:datePickerMode="spinner"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView2" />
 
-        <fragment
-            android:id="@+id/map"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/choose_finish_layout" />
+        <TimePicker
+            android:id="@+id/time_picker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:timePickerMode="spinner"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/date_picker" />
 
+        <Button
+            android:id="@+id/select_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/select"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/time_picker" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
