--- a/app/src/main/res/menu/create_group_ride_route_menu.xml
+++ b/app/src/main/res/menu/create_group_ride_route_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/continue_create_group_ride"
-        android:icon="@drawable/ic_arrow_right"
+        android:id="@+id/create_group_ride"
+        android:icon="@drawable/ic_done"
         android:title="@string/create_group_ride"
         app:showAsAction="ifRoom" />
 </menu>
