update group ride creating, add images for group rides

--- a/app/src/main/res/layout/recycler_group_rides_item.xml
+++ b/app/src/main/res/layout/recycler_group_rides_item.xml
@@ -19,14 +19,15 @@
         <ImageView
             android:id="@+id/map_image"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="0dp"
             android:scaleType="centerCrop"
-            tools:src="@drawable/map" />
+            app:layout_constraintDimensionRatio="h,16:11" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:gravity="center"
             android:maxLines="2"
             android:textColor="@android:color/black"
