--- a/app/src/main/res/layout/activity_create_group_ride_route.xml
+++ b/app/src/main/res/layout/activity_create_group_ride_route.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.groupride.CreateGroupRideRouteActivity">
+    tools:context=".ui.activity.groupride.CreateGroupRideRouteActivity"
+    tools:ignore="ContentDescription">
 
     <ImageView
         android:id="@+id/point1"
@@ -49,6 +50,7 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         android:hint="@string/tap_to_pick_start_point"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/point1"
         app:layout_constraintTop_toTopOf="parent">
@@ -68,6 +70,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginStart="12dp"
         android:hint="@string/tap_to_pick_finish_point"
+        app:errorEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/point2"
         app:layout_constraintTop_toBottomOf="@id/choose_start_layout">
@@ -88,6 +91,16 @@
         android:layout_marginTop="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/choose_finish_layout" />
+
+    <ProgressBar
+        android:id="@+id/choose_route_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
 
