--- a/app/src/main/res/layout/fragment_group_rides.xml
+++ b/app/src/main/res/layout/fragment_group_rides.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diploma.volodymyr.bicyclecity.ui.fragment.GroupRidesFragment">
+    tools:context="com.diploma.volodymyr.bicyclecity.ui.fragment.GroupRidesListFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_layout"
