--- a/app/src/main/res/layout/activity_group_ride_details.xml
+++ b/app/src/main/res/layout/activity_group_ride_details.xml
@@ -20,7 +20,7 @@
             android:layout_height="match_parent"
             android:background="@drawable/toolbar_background"
             android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:toolbarId="@+id/toolbar">
 
@@ -41,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/fab_margin"
+        android:visibility="invisible"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
         app:srcCompat="@drawable/ic_plus" />
