--- a/app/src/main/res/layout/activity_create_group_ride_route.xml
+++ b/app/src/main/res/layout/activity_create_group_ride_route.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.groupride.CreateGroupRideRouteActivity"
+    tools:context=".ui.activity.SelectRouteActivity"
     tools:ignore="ContentDescription">
 
     <ImageView
