add loading competitions list

--- a/app/src/main/res/layout/fragment_competitions.xml
+++ b/app/src/main/res/layout/fragment_competitions.xml
@@ -1,7 +1,21 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.diploma.volodymyr.bicyclecity.ui.fragment.CompetitionsFragment">
+    tools:context="com.diploma.volodymyr.bicyclecity.ui.fragment.CompetitionsListFragment">
 
-</FrameLayout>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/competitions_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:paddingBottom="100dp"
+            android:paddingTop="8dp"
+            tools:listitem="@layout/recycler_competitions_item" />
+    </android.support.v4.widget.SwipeRefreshLayout>
+</android.support.constraint.ConstraintLayout>
